<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.6.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>rideswebsocket</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>rideswebsocket</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version>
		<skipTests>true</skipTests>
	</properties>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.58</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!--  cache -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<!--  redis -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<!--<dependency>-->
			<!--<groupId>com.alibaba.spring.boot</groupId>-->
			<!--<artifactId>dubbo-spring-boot-starter</artifactId>-->
			<!--<version>2.0.0</version>-->
		<!--</dependency>-->
		<!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
		<!--<dependency>-->
			<!--<groupId>com.101tec</groupId>-->
			<!--<artifactId>zkclient</artifactId>-->
			<!--<version>0.11</version>-->
		<!--</dependency>-->


		<!-- https://mvnrepository.com/artifact/com.alibaba/dubbo -->
		<!--<dependency>-->
			<!--<groupId>com.alibaba</groupId>-->
			<!--<artifactId>dubbo</artifactId>-->
			<!--<version>2.6.7</version>-->
		<!--</dependency>-->

		<!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
		<!--<dependency>-->
			<!--<groupId>org.apache.curator</groupId>-->
			<!--<artifactId>curator-framework</artifactId>-->
			<!--<version>4.2.0</version>-->
		<!--</dependency>-->

		 <!--https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper-->
		<!--<dependency>-->
			<!--<groupId>org.apache.zookeeper</groupId>-->
			<!--<artifactId>zookeeper</artifactId>-->
			<!--<version>3.4.14</version>-->
			<!--<type>pom</type>-->
		<!--</dependency>-->

		<!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes -->
		<!--<dependency>-->
			<!--<groupId>org.apache.curator</groupId>-->
			<!--<artifactId>curator-recipes</artifactId>-->
			<!--<version>4.2.0</version>-->
		<!--</dependency>-->


		<!--&lt;!&ndash; https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp &ndash;&gt;-->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.0.0</version>
		</dependency>

		<!--&lt;!&ndash; https://mvnrepository.com/artifact/com.squareup.okio/okio &ndash;&gt;-->
		<dependency>
			<groupId>com.squareup.okio</groupId>
			<artifactId>okio</artifactId>
			<version>2.2.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib</artifactId>
			<version>1.3.41</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.8</version>
			<scope>provided</scope>
		</dependency>



		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<!--<dependency>-->
			<!--<groupId>org.springframework.boot</groupId>-->
			<!--<artifactId>spring-boot-starter-jdbc</artifactId>-->
		<!--</dependency>-->
		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
		<!--<dependency>-->
			<!--<groupId>org.mybatis</groupId>-->
			<!--<artifactId>mybatis</artifactId>-->
			<!--<version>3.5.2</version>-->
		<!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.mybatis</groupId>-->
			<!--<artifactId>mybatis-spring</artifactId>-->
		<!--</dependency>-->
		<!--<dependency>-->
			<!--<groupId>mysql</groupId>-->
			<!--<artifactId>mysql-connector-java</artifactId>-->
		<!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.projectlombok</groupId>-->
			<!--<artifactId>lombok</artifactId>-->
		<!--</dependency>-->
        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>2.1.0</version>
        </dependency>
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.16</version>
		</dependency>



		<!--<dependency>-->
			<!--<groupId>com.alibaba</groupId>-->
			<!--<artifactId>druid</artifactId>-->
		<!--</dependency>-->

		<!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-client -->
		<dependency>
			<groupId>org.apache.rocketmq</groupId>
			<artifactId>rocketmq-client</artifactId>
			<version>4.5.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-common -->
		<dependency>
			<groupId>org.apache.rocketmq</groupId>
			<artifactId>rocketmq-common</artifactId>
			<version>4.5.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.alibaba.rocketmq/rocketmq-client -->
		<!--<dependency>-->
			<!--<groupId>com.alibaba.rocketmq</groupId>-->
			<!--<artifactId>rocketmq-client</artifactId>-->
			<!--<version>3.6.2.Final</version>-->
		<!--</dependency>-->

		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.26</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.26</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
		<!--<dependency>-->
			<!--<groupId>org.apache.shiro</groupId>-->
			<!--<artifactId>shiro-spring</artifactId>-->
			<!--<version>1.4.1</version>-->
		<!--</dependency>-->
		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-core -->
		<!--<dependency>-->
			<!--<groupId>org.apache.shiro</groupId>-->
			<!--<artifactId>shiro-core</artifactId>-->
			<!--<version>1.4.1</version>-->
		<!--</dependency>-->








	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!--<configuration>-->
					<!--<mainClass>com.example.rideswebsocket.RideswebsocketApplication</mainClass>-->
				<!--</configuration>-->
			</plugin>
		</plugins>
	</build>

</project>
